# tiny-reasoning-language-model

./: .gitignore  .pre-commit-config.yaml  README.md  interesting_examples.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: uv-ci.yaml
data/: data_collection.py
data/config/: stage_1.yaml  stage_2.yaml  stage_3.yaml
post_training/: dpo.py  sft.py
post_training/config/: stage_1.yaml  stage_2.yaml  stage_3.yaml
